# netvlad_tf_open

./: CMakeLists.txt  package.xml
msg/: Descriptor.msg  descriptor.msg
scripts/: netvlad_node.py
srv/: netvlad_result.srv
